feat(backend): update auth flows, prediction entities, and refresh-token metadata
- Apply backend auth/session/token-related changes across controllers, filters, services, DTOs, and repositories

- Add migration and DTO/schema updates for refresh token session metadata and related domain sync

- Extend test coverage and logging config updates